# LiteCube

./: AGENTS.md  README.md  merge_summary.md  merge_summary_report.md
cl-table/: Cargo.toml
cl-table/src/types/: field.rs
docs/: README.md  总体设计.md
docs/总体设计/: 总体设计.md
docs/详细设计/: 临时文件管理.md  创建多维表.md  编辑多维表.md
docs/需求分析/: 需求分析.md
docs/项目功能/: 功能说明.md
rust/: Cargo.toml  data.cl
rust/src/: lib.rs  main.rs
rust/src/api/: field.rs  file.rs  mod.rs  table.rs  validators.rs
rust/src/cli/: mod.rs
rust/src/db/: connection.rs  field.rs  mod.rs  table.rs
rust/src/types/: field.rs  file.rs  mod.rs  table.rs
